# bookworm

./: .gitignore  LICENCE  Pipfile  README.md  dev-requirements.txt  main.py  setup.cfg  upload_to_pypi.py
.github/workflows/: python-app.yml
bookworm/: __init__.py
cli/: Prompt.py  PromptBook.py  banner.py  book_parser.py  goal_parser.py  main.py  option.py  parser.py  prompt.py  recommendation.py  validate.py
cli/tests/: test_banner.py  test_option.py  test_parser.py  test_validator.py
database/: books.py  db.py  goal.py  goals.py  shelf.py
database/tests/: test_books.py  test_goals.py
lib/: __init__.py  audiobook.py  audiobookseconds.py  book.py  ebook.py  format.py  goal.py  goal_tracker.py  ibook.py  shelf.py
lib/tests/: test_ebook.py  test_goal.py  test_goal_tracker.py
tests/: test_audiobook.py  test_database.py  test_goal.py  test_prompt.py
tests/cli_tests/: test_banner.py  test_option.py  test_parser.py  test_prompt.py  test_validator.py
tests/database_tests/: test_books.py  test_goals.py
tests/lib_tests/: test_audiobook.py  test_book.py  test_ebook.py  test_goal_tracker.py  test_shelf.py
