[metadata]
name = bkwrm
version = 0.1.6.3
description = Keep track of your progress towards your book-reading goal.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aamirza/bookworm
author = 'Aamir Mirza'
license = MIT
license-file = LICENCE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >= 3.7
zip_safe = False

[options.packages.find]
include = bookworm, cli, database, lib
exclude = tests


[options.entry_points]
console_scripts =
    bookworm = bookworm:main
